--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/deeptec
 PORT=5001
-GOOGLE_CLIENT_ID=YOUR_ACTUAL_CLIENT_ID.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=<your-actual-google-client-id>.apps.googleusercontent.com
 JWT_SECRET=your_jwt_secret_key
