--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID=YOUR_ACTUAL_CLIENT_ID.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID=<your-actual-google-client-id>.apps.googleusercontent.com
+REACT_APP_API_URL=http://localhost:5001
